--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <link rel="stylesheet" href="/styles.css">
     <script src="https://kit.fontawesome.com/2a049a4651.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="/profilepic.png">
     <title>Tyyy</title>
 </head>
 <body>
