--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="/profilepic.png">
     <script src="https://kit.fontawesome.com/2a049a4651.js" crossorigin="anonymous"></script>
     <title>Tyyy</title>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="website title" />
+    <meta property="og:description" content="website description" />
+    <meta property="og:url" content="website url" />
+    <meta property="og:image" content="full thumbnail path" />
 </head>
 <body>
     <div class="opener1"></div>
