--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="https://kit.fontawesome.com/2a049a4651.js" crossorigin="anonymous"></script>
     <title>Tyyy</title>
     <meta property="og:type" content="website">
-    <meta property="og:title" content="website title" />
-    <meta property="og:description" content="website description" />
-    <meta property="og:url" content="website url" />
-    <meta property="og:image" content="full thumbnail path" />
+    <meta property="og:title" content="Tyyy the wannabe developer" />
+    <meta property="og:description" content="Heres my website which links all my socials! Don't be shy, join the discord." />
+    <meta property="og:url" content="https://tyyyy.xyz/" />
+    <meta property="og:image" content="/profilepic.png" />
 </head>
 <body>
     <div class="opener1"></div>
