--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="/profilepic.png">
     <script src="https://kit.fontawesome.com/2a049a4651.js" crossorigin="anonymous"></script>
     <title>Tyyy</title>
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Tyyy the wannabe developer" />
-    <meta property="og:description" content="Heres my website which links all my socials! Don't be shy, join the discord." />
-    <meta property="og:url" content="https://tyyyy.xyz/" />
-    <meta property="og:image" content="/profilepic.png" />
+   <meta property="og:type" content="website">
+<meta property="og:title" content="tyyy **->** Home" />
+<meta property="og:description" content="Welcome to my website! It's just a link to all my socials." />
+<meta property="og:url" content="https://tyyyy.xyz/" />
+<meta property="og:image" content="/profilepic.png" />
 </head>
 <body>
     <div class="opener1"></div>
